chore: export status
