# src/status/models/statusManager.ts
@@ -8,17 +8,17 @@ import { SERVICES } from '../../common/constants';
 import { IJobParameters, IJobStatusResponse, ITaskParameters } from '../../common/interfaces';
 
 @injectable()
-export class JobStatusManager {
+export class StatusManager {
   public constructor(
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
     @inject(JobManagerWrapper) private readonly jobManagerClient: JobManagerWrapper,
   ) {}
 
-  public async checkStatus(jobID: string): Promise<IJobStatusResponse> {
+  public async getStatus(jobID: string): Promise<IJobStatusResponse> {
     this.logger.info('logging');
     const job: IJobResponse<IJobParameters, ITaskParameters> | undefined = await this.jobManagerClient.getJob(jobID);
     if (job == undefined) {
-      throw new AppError('', httpStatus.NOT_FOUND, 'The Job ID is not exists!', true);
+      throw new AppError('', httpStatus.NOT_FOUND, 'The Job ID does not exist!', true);
     }
     const jobResponse: IJobStatusResponse = {
       percentage: job.percentage,
